--- a/Project(GUI)/nbproject/project.properties
+++ b/Project(GUI)/nbproject/project.properties
@@ -66,7 +66,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=GUI.Model.MonitoringGUI_Model
+main.class=GUI.View.FXMain
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
